Kubernetes/challenge3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 31234
